--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <title>Fernando Greca</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="#">Início</a></li>
+                <li><i class="bi bi-justify"></i></li>
             </ul>
         </nav>
     </header>
