--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/menu-mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="javascript/menu.js" defer></script>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <title>Fernando Greca</title>
 </head>
@@ -18,35 +23,51 @@
         <nav class="nav">
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><i class="bi bi-justify"></i></li>
             </ul>
         </nav>
+        <div class="btn-abrir-menu" id="btn-menu">
+            <i class="bi bi-list"></i>
+        </div>
+        <div class="menu-mobile" id="menu-mobile">
+            <div class="btn-fechar">
+                <i class="bi bi-x-lg"></i>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <div class="container">
-            <section class="inicio">
-                <div class="texto-inicio">
-                    <h1>Fernando Barros Greca</h1>
-                    <h3>Descobrindo a programação: Uma jornada de aprendizado e crescimento.</h3>
-                    <p>Desde o ensino médio, me apaixonei pela programação, influenciado por amigos que já exploravam esse universo. Com experiência em desenvolvimento web, Python e Java, tenho interesse em inteligência artificial, área que desejo explorar mais profundamente. Busco atualmente um estágio na área, ansioso por oportunidades que me permitam aplicar e expandir meu conhecimento, enquanto também aproveito meu tempo livre para praticar esportes como vôlei e beach tennis, além de assistir séries, que são fontes constantes de inspiração e entretenimento.</p>
-                    <div class="contato">
-                        <h3>Entre em contato:</h3>
-                        <a href="https://www.instagram.com/fernandobgreca/" target="_blank" class="social">
-                            <img src="img/logo-instagram.jpg" alt="">
-                        </a>
-                        <a href="https://github.com/FernandoGreca" target="_blank" class="social">
-                            <img src="img/logo-github.jpg" alt="">
-                        </a>
-                        <a href="https://www.linkedin.com/in/fernando-greca/" target="_blank" class="social">
-                            <img src="img/logo-linkedin.avif" alt="">
-                        </a>
+            <div class="row inicio">
+                <div class="col-6">
+                    <div class="texto-inicio">
+                        <h1>Fernando Barros Greca</h1>
+                        <h3>Descobrindo a programação: Uma jornada de aprendizado e crescimento.</h3>
+                        <p>Desde o ensino médio, me apaixonei pela programação, influenciado por amigos que já exploravam esse universo. Com experiência em desenvolvimento web, Python e Java, tenho interesse em inteligência artificial, área que desejo explorar mais profundamente. Busco atualmente um estágio na área, ansioso por oportunidades que me permitam aplicar e expandir meu conhecimento, enquanto também aproveito meu tempo livre para praticar esportes como vôlei e beach tennis, além de assistir séries, que são fontes constantes de inspiração e entretenimento.</p>
+                        <div class="contato">
+                            <h3>Entre em contato:</h3>
+                            <a href="https://www.instagram.com/fernandobgreca/" target="_blank" class="social">
+                                <img src="img/logo-instagram.jpg" alt="">
+                            </a>
+                            <a href="https://github.com/FernandoGreca" target="_blank" class="social">
+                                <img src="img/logo-github.jpg" alt="">
+                            </a>
+                            <a href="https://www.linkedin.com/in/fernando-greca/" target="_blank" class="social">
+                                <img src="img/logo-linkedin.avif" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="img-inicio">
-                    <img src="img/foto-fernando-insta.jpg" alt="">
+                <div class="col-6">
+                    <div class="img-inicio">
+                        <img src="img/foto-fernando-insta.jpg" alt="">
+                    </div>
                 </div>
-            </section>
+            </div>
         </div>
     </main>
 
