--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="#">Início</a></li>
+                <div class="btn-abrir-menu" id="btn-menu">
+                    <i class="bi bi-list"></i>
+                </div>
             </ul>
         </nav>
-        <div class="btn-abrir-menu" id="btn-menu">
-            <i class="bi bi-list"></i>
-        </div>
+        
         <div class="menu-mobile" id="menu-mobile">
             <div class="btn-fechar">
                 <i class="bi bi-x-lg"></i>
@@ -38,6 +38,7 @@
                 </ul>
             </nav>
         </div>
+        <div class="overlay-menu" id="overlay-menu"></div>
     </header>
 
     <main>
